ResourceAdapter: refactor and use utilities of Resources